# cmake-init

./: CMakeLists.txt  README.md
src/: main.cpp
